- update .github/workflows/build-webpack.yml

--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -9,11 +9,11 @@ jobs:
       matrix:
         type: [var, esm]
     env:
-      npmlibraryName: fftw-js
-      version: 0.1.4
+      npmlibraryName: exceljs
+      version: 1.8.0
       appendToWebpackCli: ''
-      exportFileName:  fftw-js
-      exportJSVariableName:  fftwJs
+      exportFileName:  exceljs
+      exportJSVariableName:  excelJS
     steps:
       - uses: actions/checkout@v4
 
