--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -31,10 +31,17 @@ jobs:
         shell: cmd
         run: curl https://github.com/git-for-windows/git/releases/download/v2.38.1.windows.1/PortableGit-2.38.1-64-bit.7z.exe -L --output PortableGit-2.38.1-64-bit.7z.exe && dir && 7z.exe x PortableGit-2.38.1-64-bit.7z.exe -o"PortableGit-2.38.1-64-bit"
         
-      - name: write dummy index.js
+      - if: ${{ matrix.type == 'var' }}
+        name: write dummy index.ts
         shell: bash
         run: |
           echo -e "// @ts-ignore\nexport * from \"${{ env.npmlibraryName }}\";" > src/index.ts
+
+      - if: ${{ matrix.type == 'esm' }}
+        name: write dummy index.ts
+        shell: bash
+        run: |
+          echo -e "// @ts-ignore\nexport { default } from \"${{ env.npmlibraryName }}\";" > src/index.ts
           
       # - name: write dummy index.js, advanced DO NOT REMOVE
       #   shell: sh
