- update .github/workflows/build-webpack.yml

--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -37,11 +37,14 @@ jobs:
         run: |
           echo -e "// @ts-ignore\nexport * from \"${{ env.npmlibraryName }}\";" > src/index.ts
 
+  # https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/export
+  # export * from "module-name";
+  # export { default }
       - if: ${{ matrix.type == 'esm' }}
         name: write dummy index.ts
         shell: bash
         run: |
-          echo -e "// @ts-ignore\nexport { default } from \"${{ env.npmlibraryName }}\";" > src/index.ts
+          echo -e "// @ts-ignore\nexport * from \"${{ env.npmlibraryName }}\";" > src/index.ts
           
       # - name: write dummy index.js, advanced DO NOT REMOVE
       #   shell: sh
