--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -9,11 +9,11 @@ jobs:
       matrix:
         type: [var, esm]
     env:
-      npmlibraryName: "ts-lsp-client"
-      version: 1.0.3
+      npmlibraryName: "@shjeon0730/svg-table-vanilla"
+      version: 3.1.3
       appendToWebpackCli: ''
-      exportFileName: ts-lsp-client
-      exportJSVariableName: tsLspClient
+      exportFileName: svg-table-vanilla
+      exportJSVariableName: SVGTableVanilla
     steps:
       - uses: actions/checkout@v4
 
