--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -9,11 +9,11 @@ jobs:
       matrix:
         type: [var, esm]
     env:
-      npmlibraryName: "@shjeon0730/svg-table-vanilla"
-      version: 3.1.3
+      npmlibraryName: "autoprefixer"
+      version: 10.4.21
       appendToWebpackCli: ''
-      exportFileName: svg-table-vanilla
-      exportJSVariableName: SVGTableVanilla
+      exportFileName: autoprefixer
+      exportJSVariableName: autoprefixer
     steps:
       - uses: actions/checkout@v4
 
