--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -9,11 +9,11 @@ jobs:
       matrix:
         type: [var, esm]
     env:
-      npmlibraryName: "d3-hwschematic"
-      version: 0.1.6
+      npmlibraryName: "@hpcc-js/wasm-graphviz"
+      version: 1.12.0
       appendToWebpackCli: ''
-      exportFileName: d3-hwschematic.js
-      exportJSVariableName: d3HWSchematic
+      exportFileName: hpcc-js-wasm-graphviz.js
+      exportJSVariableName: hpccjsWASMGraphviz
     steps:
       - uses: actions/checkout@v4
 
@@ -82,5 +82,6 @@ jobs:
           files: |
             dist/*.js
             dist/*.wasm
+
 
 
