--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -1,5 +1,8 @@
 name: webpack-umd-release-actions-workflow
-on: push
+on: 
+  push:
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   build:
@@ -82,6 +85,7 @@ jobs:
           files: |
             dist/*.js
             dist/*.wasm
+
 
 
 
