--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        type: [var, esm]
+        type: [var, esm, assign]
     env:
       npmlibraryName: "fastest-levenshtein"
       version: 1.0.16
@@ -66,6 +66,16 @@ jobs:
             npx webpack --help=verbose &&^
             npx cross-env NODE_ENV=production webpack ${{ env.appendToWebpackCli }} --output-library-type=var --output-library-name=${{ env.exportJSVariableName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.var.min.js
       
+      - if: ${{ matrix.type == 'assign' }}
+        shell: cmd
+        run: |
+            set PATH=^
+            ${{ github.workspace }}\node-v18.12.1-win-x64;^
+            ${{ github.workspace }}\PortableGit-2.38.1-64-bit\bin;
+            npm install ${{ env.npmlibraryName }} &&^
+            npx webpack --help=verbose &&^
+            npx cross-env NODE_ENV=production webpack ${{ env.appendToWebpackCli }} --output-library-type=assign --output-library-name=${{ env.exportJSVariableName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.assign.min.js
+      
       - if: ${{ matrix.type == 'esm' }}
         shell: cmd
         run: |
@@ -85,6 +95,7 @@ jobs:
           files: |
             dist/*.js
             dist/*.wasm
+
 
 
 
